# snv-calling

./: .flake8  .gitignore  .pre-commit-config.yaml  README.m  README.md  jupyter.Dockerfile  makefile  pyproject.toml  script.sh  script2.sh  script3.sh
assets/: CBS_MergeLevels.R  (+3 more)
snv-conet-py/: main.py  setup.cfg  setup.py
snv-conet-py/core/: event_tree.py  model_data.py  types.py  utils.py
snv-conet-py/generator/: __init__.py  cn_sampler.py  context.py  corrected_counts_generator.py  event_tree.py  event_tree_generator.py  gen_utils.py  model.py
snv-conet-py/solver/: __init__.py  cell_data.py  input.py  likelihood_calculator.py  ml_snv_solver.py  ml_solver.py  parameters_inference.py  solver.py
snv-conet-py/src/conet_integration/: loader.py  utils.py
snv-conet-py/src/core/: event_tree.py  model_data.py  types.py  utils.py
snv-conet-py/src/generator/: context.py  corrected_counts_generator.py  event_tree_generator.py  gen.py  gen_utils.py  model.py
snv-conet-py/src/solver/: likelihood_calculator.py  ml_snv_solver.py  parameters_inference.py  solver.py
snv-conet-py/src/stats/: statistic.py  statistics_calculator.py
snv-conet-py/src/stats/impl/: absolute_difference.py  ancestry_recall.py  node_snv_calling.py  snv_calling.py  utils.py
snv-conet-py/stats/: __init__.py  statistic.py  statistics_calculator.py
snv-conet-py/stats/impl/: __init__.py  absolute_difference.py  ancestry_recall.py  clusterng_precision.py  node_snv_calling.py  snv_calling.py
snv-conet-py/tests/core/: event_tree_test.py
snv-conet-py/tests/solver/: ml_snv_solver_test.py
(+49 files in other folders)
