[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["neuro <t.cakala@neurosys.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.7"
numpy = "^1.23.4"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
