[metadata]
name = snv-conet-py
version = 1.0.0
author = Tomasz Cakala
description = Joint SNV and CONET inference
url = "https://github.com/tc360950/snv-calling"
[options]
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    scipy>=1.8.1
    networkx>=2.8.2
    numpy>=1.22.4
    pandas>=1.4.2
[options.extras_require]
test =
    pytest
[options.packages.find]
where=src
